Security & Access Rights Auditor/main/default/objects/PermissionSetErrors__c/fields/Error_Line_no__c.field-meta.xml
<CustomField>
    <fullName>Error_Line_no__c</fullName>
    <label>Error Line no</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>