Security & Access Rights Auditor/main/default/objects/PermissionSetErrors__c/fields/error_text__c.field-meta.xml
<CustomField>
    <fullName>error_text__c</fullName>
    <label>error text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>